--- a/app/views/products/_content.html.erb
+++ b/app/views/products/_content.html.erb
@@ -5,10 +5,10 @@
     <% @product.variants.each do |variant| %>
     <% unless variant.stock <= 0 %>
     <div class="form-check py-4">
-      <input class="form-check-input d-none" type="radio" name="variant_id" value="<%= variant.id %>" checked>
-      <label data-target="radio-selector.option" data-action="click->radio-selector#selectRadioOption" class="form-check-label btn btn-outline-success" >
-        <%= humanized_money_with_symbol(variant.price) %>
-        <%= variant.size %>
+      <input class="form-check-input d-none" type="radio" name="variant_id" value="<%= variant.id %>" checked id="<%= variant.id %>">
+      <label data-action="click->radio-selector#selectRadioOption" class="form-check-label btn btn-dark" for="<%= variant.id %>" >
+        <p class="d-none" data-target="radio-selector.option"><%= humanized_money_with_symbol(variant.price) %></p>
+        <span ><%= variant.size %></span>
       </label>
     </div>
     <% end %>
@@ -19,8 +19,10 @@
   </h6>
   <hr>
   <div class="d-flex justify-content-around px-3 px-md-5 py-3">
-    <div class="">
-      <input data-target="radio-selector.input" id="price">
+    <div class="disabled">
+      <% @product.variants.last(1).each do |d| %>
+      <input data-target="radio-selector.input" id="price" value="<%= d.price %>" >
+      <% end %>
     </div>
     <div class="flex-grow-1">
       <% if @product.variants.sum(&:stock) <= 0 %>
