--- a/app/views/products/_content.html.erb
+++ b/app/views/products/_content.html.erb
@@ -7,8 +7,7 @@
     <div class="form-check py-4">
       <input class="form-check-input d-none" type="radio" name="variant_id" value="<%= variant.id %>" checked id="<%= variant.id %>">
       <label data-action="click->radio-selector#selectRadioOption" class="form-check-label btn btn-dark" for="<%= variant.id %>" >
-        <p class="d-none" data-target="radio-selector.option"><%= humanized_money_with_symbol(variant.price) %></p>
-        <span ><%= variant.size %></span>
+        <p class="mb-0" data-target="radio-selector.option"><%= humanized_money_with_symbol(variant.price) %>-<%= variant.size %></p>
       </label>
     </div>
     <% end %>
@@ -34,27 +33,4 @@
   </div>
   <% end %>
 </div>
-
-
-<div class="modal fade" id="ModalSize" tabindex="-1" role="dialog" aria-labelledby="ModalSizeTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="ModalSizeTitle">Guía de Medidas</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body text-left">
-        <h3 class="bg-secondary h5 py-2 px-1 font-weight-bold">Cuna</h3>
-        <p>Para colchón de hasta 0.60 m de ancho x 1.20 m de largo x 0.20 m de alto.</p>
-        <h3 class="bg-secondary h5 py-2 px-1 font-weight-bold">Twin Size</h3>
-        <p>Para colchón de hasta 1 m de ancho x 2 m de largo x 0.25 m de alto.</p>
-        <h3 class="bg-secondary h5 py-2 px-1 font-weight-bold">Queen Size</h3>
-        <p>Para colchón de hasta 1.50 m de ancho x 1.90 m de largo x 0.25 m de alto.</p>
-        <h3 class="bg-secondary h5 py-2 px-1 font-weight-bold">King Size</h3>
-        <p>Para colchón de hasta 2 m de ancho x 2 m de largo x 0.35 m de alto</p>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render 'modal' %>
